--- a/index.htm
+++ b/index.htm
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Impossible re-CAPTCHA</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>fake CAPTCHA</title>
 <style>
     body {
         margin: 0;
@@ -104,7 +104,7 @@
         color: #0f0;
         font-family: monospace;
         font-size: 1em;
-        width: 220px;
+        width: 280px;
         outline: none;
     }
 </style>
@@ -116,18 +116,16 @@
             <canvas id="captcha" width="600" height="200"></canvas>
         </div>
         <div class="input-container">
-            <input type="text" class="captcha-input" placeholder="Enter CAPTCHA text">
+            <input type="text" class="captcha-input" placeholder="Enter CAPTCHA text" />
         </div>
         <div class="button-container">
             <button class="glossy-button" onclick="generateCaptcha()">Submit</button>
             <div class="faint-text">LUCIOWINGS</div>
         </div>
-        
-        <!-- Embed Code Section -->
         <div class="embed-section">
             <h2>Embed this fake CAPTCHA:</h2>
             <div class="embed-code">
-                &lt;iframe src="<input type='text' value='YOUR_PAGE_URL_HERE'>" width="600" height="400" style="border:none;"&gt;&lt;/iframe&gt;
+                &lt;iframe src="<input type='text' value='https://luciowings.github.io/fakecaptcha/' />" width="600" height="400" style="border:none;"&gt;&lt;/iframe&gt;
             </div>
         </div>
     </div>
